<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".GovorilkaActivity"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exitText"
            android:id="@+id/exitBtn"
            android:enabled="true"
            android:clickable="true"
            android:layout_weight="1"
            android:singleLine="true"
            android:textSize="12sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settingsBtn"
            android:id="@+id/settingsBtn"
            android:layout_weight="1"
            android:singleLine="true"
            android:textSize="12sp"
            android:onClick="callSettingsScreen"
            android:enabled="true"
            android:clickable="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/resetBtn"
            android:layout_weight="1"
            android:onClick="resetButtonClick"
            android:singleLine="true"
            android:textSize="12sp"
            android:enabled="true"
            android:clickable="true" />

        <Button
            android:onClick="onTalkButtonClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talkButtonText"
            android:id="@+id/talkBtn"
            android:singleLine="true"
            android:layout_weight="1"
            android:textSize="12sp"
            android:clickable="true"
            android:enabled="true" />

    </LinearLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/imageViewBig"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/smallPic1"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/smallPic2"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/smallPic3"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/log_text"

        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent" />

</LinearLayout>