<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backBtn"
        android:id="@+id/button"
        style="@android:style/Widget.Holo.Button"
        android:enabled="true"
        android:singleLine="true"
        android:layout_gravity="center"
        android:height="12dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Выберите три кодовых слова:"
        android:id="@+id/plsEnterCodeText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/codePh1"
        android:text="2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/codePh2"
        android:text="5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/codePh3"
        android:text="7" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Нажмите на 3 изображения замка и выберите из галереи:"
        android:id="@+id/textView5" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageButton4"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/locked"
            android:layout_weight="0.33"
            android:onClick="btn1Click" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageButton5"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/locked"
            android:layout_weight="0.33"
            android:onClick="btn2Click" />

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageButton6"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:layout_weight="0.33"
            android:src="@drawable/locked"
            android:onClick="btn3Click" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Выбор звука:"
        android:id="@+id/textView"
        android:layout_gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/successBtn"
            android:id="@+id/successBtn"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FailBtn"
            android:id="@+id/failBtn"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView6"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView7"
            android:layout_weight="1" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/yandexOnline"
            android:id="@+id/yandexOnlineText"
            android:layout_gravity="center"
            android:layout_weight="0.8" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/toggleYaOnline"
            android:onClick="turnYandexOn"
            android:longClickable="false"
            android:layout_gravity="right"
            android:layout_weight="0.2"
            android:checked="false" />

    </LinearLayout>

</LinearLayout>